--- a/CSS_Course/Project 1/index.html
+++ b/CSS_Course/Project 1/index.html
@@ -15,5 +15,27 @@
     />
     <title>Plain & Simple</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Navigation Bar -->
+    <nav id="main-navigation">
+      <ul class="container">
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="" class="last-nav">Get Started</a></li>
+      </ul>
+    </nav>
+
+    <section id="landing-section">
+      <div class="container">
+        <h1 class="alt-font">Plain & Simple</h1>
+        <p>
+          Concersion scrum project creative beta mass market accelerator
+          interaction design paradigm shift alpha MVP, conversion funding
+          android technology low hanging fruit social proof rockstar.
+        </p>
+        <button type="button" name="buttom">Get Started</button>
+      </div>
+    </section>
+  </body>
 </html>
