--- a/CSS_Course/Project 1/index.html
+++ b/CSS_Course/Project 1/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Quicksand:300,400&display=swap"
+      href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -26,6 +26,7 @@
       </ul>
     </nav>
 
+    <!-- Landing Section -->
     <section id="landing-section">
       <div class="container">
         <h1 class="alt-font">Plain & Simple</h1>
@@ -35,6 +36,45 @@
           android technology low hanging fruit social proof rockstar.
         </p>
         <button type="button" name="buttom">Get Started</button>
+      </div>
+    </section>
+
+    <!-- Info Section -->
+    <section id="info-section" class="container">
+      <h4>Default headers are default</h4>
+      <h2>
+        Pivor iteration resposive web design. Graphical user interface
+        technology investor equity.
+      </h2>
+
+      <div id="info-blocks">
+        <div id="support" class="info-block">
+          <h3>Real-Time Support</h3>
+          <p>
+            Infographic ownership client buzz to-business incubator
+            bootstrapping parthnership social proof alpha pitch branding
+            deployment.
+          </p>
+          <a href="#">Learn More</a>
+        </div>
+
+        <div id="worldwide" class="info-block">
+          <h3>We operate Worldwide</h3>
+          <p>
+            Incubator investor techonolgy scrim project research & development
+            iteration. MVP crowdfunding business-to-business.
+          </p>
+          <a href="#">Learn More</a>
+        </div>
+
+        <div id="cloud" class="info-block">
+          <h3>Cloud Computing</h3>
+          <p>
+            Equity pivot termsheet rockstar. Incubaor release rate ecosystem
+            social media network startup investor agreement validation.
+          </p>
+          <a href="#">Learn More</a>
+        </div>
       </div>
     </section>
   </body>
