--- a/CSS_Course/Project 1/index.html
+++ b/CSS_Course/Project 1/index.html
@@ -77,5 +77,125 @@
         </div>
       </div>
     </section>
+
+    <!-- Blog-preview -->
+    <section id="blog-preview">
+      <div class="container">
+        <h6>Dec. 03, 2019</h6>
+        <h2>We do THings right</h2>
+        <p>
+          Low haging fruit responsive web design bootstrapping value proposition
+          growth hacking entrepreneur funding. Crowdsource product management
+          iPhone traction iteration prototype. Business model canvas ownership
+          hackathon iPhone leverage low haging fruit buzz.
+        </p>
+        <button type="button" name="button" id="read-full">Read Full</button>
+        <button type="button" name="buttom" id="see-full-blog">
+          See Full Blog
+        </button>
+      </div>
+    </section>
+
+    <!-- Pricing-section -->
+    <section id="pricing-section" class="container">
+      <div id="pricing">
+        <h2>We Word for you!</h2>
+        <h3>Choose your plan.</h3>
+
+        <div class="chart">
+          <h5>Basic</h5>
+          <h4>Free</h4>
+
+          <h6>500MB Strorage</h6>
+          <h6>1 Domain</h6>
+          <h6 class="hide">No support</h6>
+          <h6 class="hide">No backups</h6>
+          <button type="button" name="button">Select</button>
+        </div>
+
+        <div class="chart">
+          <h5>Super</h5>
+          <h4>$19.99/ <small>mo</small></h4>
+
+          <h6>100GB Strorage</h6>
+          <h6>5 Domain</h6>
+          <h6>24/7 Support</h6>
+          <h6>Monthly Backups</h6>
+          <button type="button" name="button">Select</button>
+        </div>
+
+        <div class="chart">
+          <h5>Super</h5>
+          <h4>$39.99/ <small>mo</small></h4>
+
+          <h6>2TB Strorage</h6>
+          <h6>10 Domain</h6>
+          <h6>24/7 Support</h6>
+          <h6>Monthly Backups</h6>
+          <button type="button" name="button">Select</button>
+        </div>
+      </div>
+
+      <img src="assets/css/images/developer.png" alt="A person reading" />
+    </section>
+
+    <!-- Footer Section -->
+    <footer id="footer-section">
+      <div class="container">
+        <div id="branding">
+          <h3 class="alt-font">Plain & Simple</h3>
+          <p>
+            Bandwidth long tali facebook crowdfunding metrics series A finacing
+            founders alpha deployment business plan parthership angel investor.
+            Virality twitter deployment android MVP. Startup ecosystem assets
+            product management burn rate.
+          </p>
+          <h5 class="alt-font">Copyright 2019</h5>
+        </div>
+
+        <div id="links">
+          <h3>Connect with us.</h3>
+          <div id="social-icons">
+            <img
+              src="assets/css/images/google-plus.png"
+              alt="A google plus icon"
+            />
+            <img src="assets/css/images/facebook.png" alt="" />
+            <img src="assets/css/images/linkedin.png" alt="" />
+            <img src="assets/css/images/twitter.png" alt="" />
+            <img src="assets/css/images/instagram.png" alt="" />
+          </div>
+
+          <nav>
+            <ul>
+              <li><h6>Sponsors</h6></li>
+              <li><a href="">Tech Fiber</a></li>
+              <li><a href="">Trest</a></li>
+              <li><a href="">ChatBed</a></li>
+              <li><a href="">Cashare</a></li>
+              <li><a href="">Swindle</a></li>
+              <li><a href="">Eratyne</a></li>
+            </ul>
+
+            <ul>
+              <li><h6>Navigation</h6></li>
+              <li><a href="">About</a></li>
+              <li><a href="">Contact</a></li>
+              <li><a href="">Policy</a></li>
+              <li><a href="">Get Started</a></li>
+              <li><a href="">Back to top</a></li>
+            </ul>
+
+            <ul>
+              <li><h6>Company</h6></li>
+              <li><a href="">Terms of service</a></li>
+              <li><a href="">FAQ</a></li>
+              <li><a href="">Referral Program</a></li>
+              <li><a href="">Jobs</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
