--- a/Color Game Project/colorGame.html
+++ b/Color Game Project/colorGame.html
@@ -1,38 +1,38 @@
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="colorGame.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="colorGame.css" />
     <title>Color Game</title>
-</head>
+  </head>
 
-<body>
-    <h1>The Great
-         <br>
-          <span id="colorDisplay">RGB</span>
-           <br>
-         Color Game</h1>
+  <body>
+    <h1>
+      The Great
+      <br />
+      <span id="colorDisplay">RGB</span>
+      <br />
+      Color Game
+    </h1>
 
     <div id="stripe">
-        <button id="resetColors">New Colors</button>
-        <span id="message"></span>
-        <button class="mode">Easy</button>
-        <button  class="mode selected">Hard</button>
-        <!-- <button id="easyBtn">Easy</button>
+      <button id="resetColors">New Colors</button>
+      <span id="message"></span>
+      <button class="mode">Easy</button>
+      <button class="mode selected">Hard</button>
+      <!-- <button id="easyBtn">Easy</button>
         <button id="hardBtn" class="selected">Hard</button> -->
     </div>
     <div id="container">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
     </div>
 
     <script src="colorGame.js"></script>
-</body>
-
+  </body>
 </html>
