--- a/CSS_Course/Advanced Selectors/Hierarchy Terms.html
+++ b/CSS_Course/Advanced Selectors/Hierarchy Terms.html
@@ -17,6 +17,7 @@
       /* Children */
       /* Children are elements inside of their parents */
       /* Siblings */
+      /* The elements inside of a parent elements are also siblings */
     </style>
     <title>Hierarchy Terms</title>
   </head>
