--- a/CSS_Course/Advanced Selectors/Selecting Via Hierarchy.html
+++ b/CSS_Course/Advanced Selectors/Selecting Via Hierarchy.html
@@ -4,7 +4,7 @@
  * Author: Marcello Alfaro                                * 
  * Email: marcello.alfaro1@gmail.com                      * 
  *               --------------------------               * 
- * Last Modified: Thursday, 7th November 2019 11:27:54 am * 
+ * Last Modified: Sunday, 10th November 2019 8:39:47 pm   * 
  * Modified By: Marcello Alfaro                           * 
  *               --------------------------               * 
  * Copyright (c) 2019 - Marshall Inc.                     * 
