--- a/CSS_Course/Project 2/index.html
+++ b/CSS_Course/Project 2/index.html
@@ -4,7 +4,7 @@
  * Author: Marcello Alfaro                                * 
  * Email: marcello.alfaro1@gmail.com                      * 
  *               --------------------------               * 
- * Last Modified: Sunday, 10th November 2019 8:32:06 pm   * 
+ * Last Modified: Friday, 15th November 2019 11:12:34 pm  * 
  * Modified By: Marcello Alfaro                           * 
  *               --------------------------               * 
  * Copyright (c) 2019 - Marshall Inc.                     * 
@@ -75,5 +75,33 @@
       <button class="bold-weight auto-margins">Shop Now</button>
     </section>
     <!-- End Landing Section -->
+
+    <!-- Begin Action Section -->
+    <section id="action-section" class="align-center auto-margins">
+      <div id="deals" class="actionable">
+        <a href="" class="max-width-height"><h4>New Deals</h4></a>
+      </div>
+      <div id="new_stuff" class="actionable">
+        <a href="" class="max-width-height"><h4>New Stuff</h4></a>
+      </div>
+      <div id="popular" class="actionable">
+        <a href="" class="max-width-height"><h4>Most Popular</h4></a>
+      </div>
+
+      <div id="group" class="actionable">
+        <div>
+          <a href="" class="max-width-height"
+            ><h3 class="white light-weight">Shop Now</h3></a
+          >
+        </div>
+        <div>
+          <a href="" class="max-width-height"
+            ><h3 class="white extra-light-weight">Shop Now</h3></a
+          >
+        </div>
+      </div>
+    </section>
+
+    <!-- Ends Action Section -->
   </body>
 </html>
