--- a/CSS_Course/Project 2/index.html
+++ b/CSS_Course/Project 2/index.html
@@ -1,14 +1,14 @@
 <!--
- * ****************************************************** * 
- * Created Date: Sunday, 10th November 2019 5:55:55 pm    * 
- * Author: Marcello Alfaro                                * 
- * Email: marcello.alfaro1@gmail.com                      * 
- *               --------------------------               * 
- * Last Modified: Friday, 15th November 2019 11:12:34 pm  * 
- * Modified By: Marcello Alfaro                           * 
- *               --------------------------               * 
- * Copyright (c) 2019 - Marshall Inc.                     * 
- * ****************************************************** * 
+ * ******************************************************** * 
+ * Created Date: Sunday, 10th November 2019 5:55:55 pm      * 
+ * Author: Marcello Alfaro                                  * 
+ * Email: marcello.alfaro1@gmail.com                        * 
+ *                --------------------------                * 
+ * Last Modified: Saturday, 23rd November 2019 7:30:42 pm   * 
+ * Modified By: Marcello Alfaro                             * 
+ *                --------------------------                * 
+ * Copyright (c) 2019 - Marshall Inc.                       * 
+ * ******************************************************** * 
 -->
 
 <!DOCTYPE html>
@@ -96,12 +96,157 @@
         </div>
         <div>
           <a href="" class="max-width-height"
-            ><h3 class="white extra-light-weight">Shop Now</h3></a
+            ><h4 class="white light-weight">Create an Account</h4></a
           >
         </div>
       </div>
     </section>
-
     <!-- Ends Action Section -->
+
+    <!-- Begin Info Section -->
+    <section id="info" class="dark-grey">
+      <div class="auto-margins">
+        <div>
+          <h4>Fast Shipping</h4>
+          <p class="light-weight black">
+            Buyer backing agile development createive gen-z focus startup
+            infrastructure venture.
+          </p>
+        </div>
+        <div>
+          <h4>Hottest Trends</h4>
+          <p class="light-weight black">
+            Buyer backing agile development createive gen-z focus startup
+            infrastructure venture.
+          </p>
+        </div>
+        <div>
+          <h4>Lorem Ipsum</h4>
+          <p class="light-weight black">
+            Buyer backing agile development createive gen-z focus startup
+            infrastructure venture.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- Ends Info Section -->
+
+    <!-- Begin Feature Section -->
+    <section id="featured" class="align-center">
+      <h3 class="medium-weight">Featured</h3>
+      <p class="light-grey light-weight auto-margins">
+        Vintage Urban embroidery artistic. Vintage stylish pumps replicate
+        imprint classic bold. Waisline old-fashioned handbag item etiquette
+        shade pumps popular
+      </p>
+
+      <div id="items" class="auto-margins">
+        <div class="item">
+          <a href=""><span class="price white">$29</span></a>
+          <small><em>Jeans</em></small>
+          <h6>Product Name</h6>
+        </div>
+        <div class="item">
+          <a href=""><span class="price white">$29</span></a>
+          <small><em>Shirts</em></small>
+          <h6>Product Name</h6>
+        </div>
+        <div class="item">
+          <a href=""><span class="price white">$29</span></a>
+          <small><em>Shirts</em></small>
+          <h6>Product Name</h6>
+        </div>
+        <div class="item">
+          <a href=""><span class="price white">$29</span></a>
+          <small><em>Jackets</em></small>
+          <h6>Product Name</h6>
+        </div>
+      </div>
+    </section>
+    <!-- Ends Feature Section -->
+
+    <!-- Begin Register Section -->
+    <section id="register">
+      <h6 class="dark-grey align-center">
+        Already have an account?<span class="blue"
+          ><a href=""> Log In.</a></span
+        >
+      </h6>
+      <h3 class="light-weight align-center">Register Now!</h3>
+
+      <form action="" class="auto-margins light-weight light-grey">
+        <div class="input-block">
+          <input type="text" placeholder="Fisrt Name" name="" id="" />
+          <input type="text" placeholder="Fisrt Name" name="" id="" />
+        </div>
+        <div class="input-block">
+          <input type="email" name="" placeholder="Email" id="" />
+        </div>
+        <div class="input-block">
+          <input type="password" placeholder="Enter Password" name="" id="" />
+          <input type="password" placeholder="Confirm Password" name="" id="" />
+        </div>
+        <div id="terms" class="black light-weight auto-margins">
+          <input type="checkbox" />
+          <label for=""
+            >I agree to the
+            <span class="blue"><a href="">Terms and agreements.</a></span>
+          </label>
+        </div>
+
+        <input
+          type="submit"
+          value="Register"
+          class="auto-margins extra-light-weight"
+        />
+      </form>
+    </section>
+    <!-- Ends Register Section -->
+
+    <!-- Begin Newsletter Section -->
+    <section id="newsletter" class="white">
+      <!-- We want this div to be a big as the section -->
+      <div class="max-width-height">
+        <h2 class="align-center">Subscribe to our newsletter</h2>
+        <p class="light-weight align-center auto-margins">
+          Buyer backing agile development creative gen-z focus startup
+          infrastructure venture. Assets seed round customer backing advisor
+        </p>
+        <form class="auto-margins bold-weight" action="">
+          <input type="email" placeholder="Email" />
+          <input type="submit" value="Subscribe" class="white" />
+        </form>
+      </div>
+    </section>
+    <!-- Ends Newsletter Section -->
+
+    <!-- Begin Footer Section -->
+    <section id="footer" class="white">
+      <div id="social-media" class="auto-margins">
+        <img src="assets/images/soc_facebook.png" alt="" />
+        <img src="assets/images/soc_instagram.png" alt="" />
+        <img src="assets/images/soc_twitter.png" alt="" />
+        <img src="assets/images/soc_youtube.png" alt="" />
+        <img src="assets/images/soc_linkedin.png" alt="" />
+      </div>
+
+      <nav id="links" class="extra-light-weight align-center auto-margins">
+        <ul>
+          <li><a href="">Categories</a></li>
+          <li><a href="">Register an Account</a></li>
+          <li><a href="">Sign In</a></li>
+          <li><a href="">Sell</a></li>
+          <li><a href="">F.A.Q</a></li>
+          <li><a href="">Shipping</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Terms</a></li>
+          <li><a href="">Privacy Policy</a></li>
+          <li><a href="">Back to Top</a></li>
+        </ul>
+      </nav>
+
+      <h5 class="align-center">Copyright &copy; 2019</h5>
+    </section>
+    <!-- End Footer Section -->
   </body>
 </html>
