--- a/Journey/index.html
+++ b/Journey/index.html
@@ -4,7 +4,7 @@
  * Author: Marcello Alfaro                                  * 
  * Email: marcello.alfaro1@gmail.com                        * 
  *                --------------------------                * 
- * Last Modified: Wednesday, 27th November 2019 11:41:41 pm * 
+ * Last Modified: Thursday, 28th November 2019 11:57:10 am  * 
  * Modified By: Marcello Alfaro                             * 
  *                --------------------------                * 
  * Copyright (c) 2019 - Marshall Inc.                       * 
@@ -477,6 +477,17 @@
                 colombianos</a
               >
             </h2>
+          </div>
+        </div>
+
+        <div id="social-indicators">
+          <div class="row">
+            <div class="col-3">
+              <small><span class="likes">234</span>Likes</small>
+            </div>
+            <div class="col-3">
+              <small><span class="comments">12</span>Comentarios</small>
+            </div>
           </div>
         </div>
 
