--- a/Journey/index.html
+++ b/Journey/index.html
@@ -497,7 +497,7 @@
           <div class="row">
             <div class="col-3">
               <span
-                ><button>
+                ><button id="like">
                   <i class="far fa-thumbs-up fa-2x"></i> Me gusta
                 </button></span
               >
