--- a/CSS_Course/AnimationsTransitions/Animation Resoruces.html
+++ b/CSS_Course/AnimationsTransitions/Animation Resoruces.html
@@ -4,13 +4,12 @@
  * Author: Marcello Alfaro                                  * 
  * Email: marcello.alfaro1@gmail.com                        * 
  *                --------------------------                * 
- * Last Modified: Tuesday, 3rd March 2020 12:41:35 pm       * 
+ * Last Modified: Tuesday, 12th May 2020 2:52:09 pm         * 
  * Modified By: Marcello Alfaro                             * 
  *                --------------------------                * 
  * Copyright (c) 2020 - Marshall Inc.                       * 
  * ******************************************************** * 
 -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
