--- a/JavaScript Course/5-advanced-JS/starter/index.html
+++ b/JavaScript Course/5-advanced-JS/starter/index.html
@@ -7,6 +7,6 @@
 
   <body>
     <h1>Section 5: Advanced JavaScript: Objects and Functions</h1>
-    <script src="challenge.js"></script>
+    <script src="challenge_alt.js"></script>
   </body>
 </html>
